--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
       # Commit all changed files to the repository
       - name: Commit to the repo
         run: |
-          git config --global user.name "localnetwork/github-stats"
-          git config --global user.email "diomenikep@gmail.com"
+          git config --global user.name "geraldsayson909/green-auto-commit"
+          git config --global user.email "geraldsayson909@gmail.com"
           git add .
           # Force the build to succeed, even if no files were changed
           git commit -m 'Update generated files' || true
