--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,5 @@ jobs:
           git pull --force
           git add .
           # Force the build to succeed, even if no files were changed
-          git commit -m 'Update generated files' || true
-          git push
+          git commit -m 'Update generated files' --force || true
+          git push --force
