--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           git config --global user.name "Dave23x1/cron_job"
           git config --global user.email "ryandavedonos@gmail.com"
+          git pull origin main
           git add .
           # Force the build to succeed, even if no files were changed
           git commit -m 'Update generated files' || true
